Fix ninja forms margin issue on Safari

--- a/src/assets/scss/modules/_content.scss
+++ b/src/assets/scss/modules/_content.scss
@@ -226,7 +226,7 @@ p.divider {
 }
 
 //Contact Form
-.ninja-forms-form-wrap * {
+.ninja-forms-form-wrap {
 	width: 100%;
 }
 .nf-before-form-content {
